# HoraroBackend

./: .dockerignore  .gitignore  Dockerfile  Makefile  conftest.py  docker-compose.local.yml  docker-compose.staging.yml  docker-compose.yml  messages.json  pyproject.toml  readme.md  setup.cfg
.github/workflows/: deploy_prod.yml  deploy_staging.yml  lint_test.yml
bots/: tasks.py  urls.py  views.py
bots/services/: __init__.py  constants.py  telegram.py  telegram_dataclasses.py
config/: celery.py  settings.py  urls.py  yasg.py
schedules/: admin.py
schedules/migrations/: 0001_initial.py  0002_userprofile_telegram_id.py  0003_delete_blockuser.py  0004_userprofile_block.py  0005_remove_userprofile_block.py  0006_blockuser.py  0007_numberweek.py  0008_blockuser_username.py  0009_userprofile_moderator.py  0010_delete_blockuser.py  0011_delete_userprofile.py  0012_day_type_week_schedule.py  0013_delete_schedules.py  0014_alter_schedule_number_pair.py  0015_event.py  0016_event_cover_image.py  0017_schedule_end_time_schedule_start_time.py  0018_delete_numberweek.py
schedules/models/: __init__.py  day.py  event.py  schedule.py  type_pair.py  week.py
schedules/rest_framework/: api.py  filters.py  router.py  serializers.py
schedules/services/: __init__.py  autofill_getter.py  current_pair_getter.py  notification_getter.py  schedule_copying.py  schedule_creator.py  schedule_week_getter.py
schedules/tests/: factories.py  test_events.py  test_notifications.py  test_schedule.py  test_telegram.py
users/: admin.py  helpers.py  validators.py
users/models/: __init__.py  (+3 more)
(+62 files in other folders)
